--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -4,7 +4,14 @@
   gap: 2px;
   flex-wrap: wrap;
 
+  // 4-elements per row (default)
+  .media-gallery__item {
+    flex: 1 20%;
+    min-height: 4em;
+  }
+
   &[data-total-items='1'] {
+    // 1-element per row (only 1 element)
     .media-gallery__item {
       flex: 1 100%;
     }
@@ -25,29 +32,6 @@
     // 3-elements per row
     .media-gallery__item {
       flex: 1 30%;
-    }
-  }
-
-  &[data-total-items='8'],
-  &[data-total-items='9'],
-  &[data-total-items='10'],
-  &[data-total-items='11'],
-  &[data-total-items='12'],
-  &[data-total-items='13'],
-  &[data-total-items='14'],
-  &[data-total-items='15'],
-  &[data-total-items='16'],
-  &[data-total-items='17'],
-  &[data-total-items='18'],
-  &[data-total-items='19'],
-  &[data-total-items='20'],
-  &[data-total-items='21'],
-  &[data-total-items='22'],
-  &[data-total-items='23'],
-  &[data-total-items='24'] {
-    // 4-elements per row
-    .media-gallery__item {
-      flex: 1 20%;
     }
   }
 }
