Switch to Kramdown for better rendering

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -875,7 +875,8 @@ body > [data-popper-placement] {
 
   p {
     margin-bottom: 20px;
-    white-space: pre-wrap;
+
+    /* white-space: pre-wrap; */
     unicode-bidi: plaintext;
 
     &:last-child {
