Port status badges to 4.2

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -1209,6 +1209,16 @@ body > [data-popper-placement] {
       text-overflow: ellipsis;
     }
   }
+
+  .status__account__badges {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+
+    .account-role {
+      font-size: 11px;
+    }
+  }
 }
 
 .status__info {
